# gradient

./: README.md  mkdocs.yml  pyproject.toml  supergene.db.session.sql
backup/: color.py  console.py  default_styles.py  log.py  run.py  spectrum.py  theme.py
src/gradient/: __init__.py  _color.py  _simple_gradient.py  color.py  common.py  default_styles.py  gradient.py  log.py  main.py  run.py  simple_gradient.py  spectrum.py  theme.py
src/rich_gradient/: __init__.py  _simple_gradient.py  color.py  default_styles.py  log.py  main.py  run.py  spectrum.py  theme.py
tests/: test_log.py  test_run.py
