[project]
name = "rich_gradient"
version = "0.0.1"
description = "Rich_Gradient automates the printing gradient colored text to the console."
authors = [
    { name = "Max Ludden", email = "dev@maxludden.com" }
]
dependencies = [
    "rich>=13.7.1",
    "pydantic>=2.7.3",
    "pydantic-extra-types>=2.8.0",
    "loguru>=0.7.2",
    "numpy>=1.26.4",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.27",
    "mkdocstrings>=0.25.1",
]
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipywidgets>=8.1.3",
    "ipykernel>=6.29.4",
    "pytest-mock>=3.14.0",
    "pytest>=8.2.2",
]
packages = [
    "src/rich_gradient"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["F401"]

[tool.ruff]
